--- a/JS08_UTS/js08_uts.ipynb
+++ b/JS08_UTS/js08_uts.ipynb
@@ -763,11 +763,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Kesimpulan\n",
+    "\n",
+    "Dari hasil percobaan diatas yang menggunakan model \"Multinominal Naive Bayes\" dapat menghasilkan akurasi yang cukup rendah, yaitu akurasi data train 43% dan akurasi data test 30%. "
+   ]
   }
  ],
  "metadata": {
